--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "paws-&-claws-pet-shop",
+  "name": "paws-claws-pet-shop",
   "private": true,
   "version": "0.0.0",
   "type": "module",
